hphp/hack/test/typecheck/dict/key_must_be_arraykey.php
<?hh

interface I {}

function foo(dict<I, string> $x): void {}
